# Sociolla-product

./: .gitignore  README.md  makefile  pyproject.toml
notebook/: data_ingestion.ipynb  datacleaning.ipynb
sociolla/: utils.py
sociolla/data_pipeline/components/: data_ingestion.py
sociolla/machine_learning/components/: data_ingestion.py  data_transformation.py  transformation.py
sociolla/utils/: utils.py
src/machine_learning/components/: data_ingestion.py
src/utils/: utils.py
tests/unit_tests/: test_data_ingestion.py
