[tool.poetry]
name = "sociolla"
version = "0.1.0"
description = ""
authors = ["RedhaWassim <rwasssim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
ipykernel = "^6.27.1"
pydantic = "^2.5.2"


[tool.poetry.group.linting.dependencies]
black = {extras = ["jupyter"], version = "^23.12.0"}
mypy = "^1.7.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
